# AcousticAnalyser

./: .gitignore  README.md  Reflection Transmission.ipynb  ReflectionTransmission.py  documentation.html  reflection_transmission_matrix  setup.cfg  setup.py  test.py  test_constraint.csv  test_member.json  test_notebook.ipynb  test_thetaplot.ipynb  test_verifyeqns.py
acoustic_analyser/: main.py
acoustic_analyser.egg-info/: PKG-INFO  SOURCES.txt
acoustic_analyser/equations/: free_end
acoustic_analyser/modules/: joint.py  rt_bc.py  rt_joint.py
documentation/: documentation.ipynb  test_constraint.csv  test_member.json  test_validation.py
src/: acoustic_analyser.py  documentation.html  documentation.ipynb  generate_equation_file.py  test.py  test_constraint.csv  test_member.json  test_notebook.ipynb  test_thetaplot.ipynb  test_verifyeqns.py
src/acoustic_analyser/: generate_equation_file.py  main.py
src/acoustic_analyser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/acoustic_analyser/equations/: cross_section  fixed_end
src/acoustic_analyser/modules/: bc.py  member.py  rt_joint.py
src/equations/: cross_section  fixed_end  free_end
src/modules/: bc.py  joint.py  member.py  reflection_transmission.py  rt_bc.py  rt_joint.py
