[metadata]
name = acoustic_analyser
version = 0.0.1
author = Dhruv Bhatia, Dr. Abhijit Sarkar
description = An Open Source package to perform nodal analysis on simple 2D structures using wave based approach
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Manofmomo/AcousticAnalyser 
classifiers =
Programming Language :: Python :: 3
Operating System :: OS Independent
[options]
package_dir=
    =src
zip_safe = True
include_package_data = True
[options.package_data]
example = src/acoustic_analyser/equations/*
* = README.md
[options.packages.find]
where=src
python_requires = >=3.9
install_requires =